style: fix wrap in tabset

--- a/src/components/Tabset/styles.scss
+++ b/src/components/Tabset/styles.scss
@@ -5,5 +5,4 @@
     justify-content: flex-start;
     align-items: center;
     overflow-y: visible;
-    flex-flow: row wrap;
 }
